# mr-mira

./: .gitignore  Makefile.am  README.md  TODO.org  configure.ac
debug/share/: config.site
m4/: boost.m4
mira/: Makefile.am  ipc.cc  ipc.h  ipc_test.cc  kbest_feeder.cc  kbest_indexer.cc  kbest_mira_mapper_ref.cc  kbest_mirav5.cc  mr_mira_reduce.cc
mteval/: Makefile.am  aer_scorer.cc  comb_scorer.cc  external_scorer.cc  scorer.cc  scorer.h  ter.cc
release/share/: config.site
scripts/: common.py  mr.py  qsub-mr.bash  run-mira-local.bash  run-mira-qsub.bash  run-mira-serial.bash
utils/: Makefile.am  b64featvector.cc  b64featvector.h  b64featvector_test.cc  fast_sparse_vector.h
